[gd_scene load_steps=12 format=3 uid="uid://b4x3wpug7lq8w"]

[ext_resource type="FontFile" uid="uid://b5ttdn78tx01t" path="res://assets/fonts/vcr.ttf" id="1"]
[ext_resource type="Script" uid="uid://cjrla7jk0kma6" path="res://scripts/MainMenu.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://cecxa7ywy6pqk" path="res://assets/icons/gear.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cpo6moaovmcnd" path="res://assets/icons/leaderboardsComplex.png" id="4"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="StyleBoxEmpty" id="7"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="GameTitle" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -296.0
offset_right = 375.0
offset_bottom = -183.0
theme_override_fonts/font = SubResource("1")
text = "PING BLAST"

[node name="AuthorLabel" type="Label" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -57.0
theme_override_fonts/font = SubResource("2")
text = "2022 - djalexkidd"
horizontal_alignment = 1

[node name="TopLabel" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.0
offset_top = 170.5
offset_right = -72.0
offset_bottom = 213.5
theme_override_fonts/font = SubResource("4")
text = "Top:"
horizontal_alignment = 1

[node name="TopValue" type="Label" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -67.0
offset_top = 171.0
offset_right = 182.0
offset_bottom = 214.0
theme_override_fonts/font = SubResource("5")
text = "0"
horizontal_alignment = 2

[node name="PlayButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -95.5
offset_right = 196.0
offset_bottom = -32.5
theme_override_fonts/font = SubResource("3")
text = "TITLE_PLAY"
flat = true

[node name="TateButton" type="Button" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -35.0
offset_right = 335.0
theme_override_fonts/font = SubResource("6")
theme_override_styles/focus = SubResource("7")
toggle_mode = true
text = "TITLE_MODE_NORMAL"
flat = true

[node name="QuitButton" type="Button" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = 32.5
offset_right = 196.0
offset_bottom = 95.5
theme_override_fonts/font = SubResource("3")
text = "TITLE_QUIT"
flat = true

[node name="SettingsButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1208.0
offset_top = 648.0
offset_right = 1272.0
offset_bottom = 712.0
texture_normal = ExtResource("3")

[node name="LeaderboardButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1208.0
offset_top = 576.0
offset_right = 1272.0
offset_bottom = 640.0
texture_normal = ExtResource("4")

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="toggled" from="TateButton" to="." method="_on_TateButton_toggled"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
